# ChangeLog for dev-libs/apr-util
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr-util/ChangeLog,v 1.145 2009/11/04 12:12:05 arfrever Exp $

  04 Nov 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  apr-util-1.3.9.ebuild:
  Use 'dohtml -r' for compatibility with Doxygen 1.6 (bug #287821).

  20 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  apr-util-1.3.9.ebuild,
  +files/apr-util-1.3.9-support_berkeley_db-4.8.patch:
  Fix building with sys-libs/db:4.8 (bug #285522).

  20 Sep 2009; Benedikt Böhm <hollow@gentoo.org> -apr-util-1.3.7.ebuild,
  -apr-util-1.3.8.ebuild:
  remove old ebuilds

  24 Aug 2009; Brent Baude <ranger@gentoo.org> apr-util-1.3.9.ebuild:
  Marking apr-util-1.3.9 ppc64 for bug 280514

  23 Aug 2009; nixnut <nixnut@gentoo.org> apr-util-1.3.9.ebuild:
  ppc stable #280514

  14 Aug 2009; Raúl Porcel <armin76@gentoo.org> apr-util-1.3.9.ebuild:
  arm/ia64/s390/sh/sparc stable wrt #280514

  11 Aug 2009; Jeroen Roovers <jer@gentoo.org> apr-util-1.3.9.ebuild:
  Stable for HPPA (bug #280514).

  10 Aug 2009; Markus Meier <maekke@gentoo.org> apr-util-1.3.9.ebuild:
  x86 stable, bug #280514

  10 Aug 2009; Tobias Klausmann <klausman@gentoo.org> apr-util-1.3.9.ebuild:
  Stable on alpha, bug #280514

  07 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  apr-util-1.3.9.ebuild:
  revert stable keyword for x86

  06 Aug 2009; Markus Meier <maekke@gentoo.org> apr-util-1.3.9.ebuild:
  x86 stable, bug #280514

  06 Aug 2009; Alex Legler <a3li@gentoo.org> apr-util-1.3.9.ebuild:
  amd64 stable, security bug 280514.

*apr-util-1.3.9 (06 Aug 2009)

  06 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -apr-util-1.2.10.ebuild, -apr-util-1.2.12.ebuild, -apr-util-1.3.0.ebuild,
  -apr-util-1.3.2.ebuild, -apr-util-1.3.4.ebuild, +apr-util-1.3.9.ebuild:
  Version bump.

*apr-util-1.3.8 (07 Jul 2009)
